--- a/módulo_I/Projeto Final/style.css
+++ b/módulo_I/Projeto Final/style.css
@@ -7,11 +7,15 @@
     --earth: #473B3B;
 }
 
+body {
+    margin: 0;
+}
+
 /* HEADER */
 nav {
     background-color: var(--purple);
     color: #FFFFFF;
-    padding: 2em 0;
+    padding: 1.5em 0;
 }
 
 nav ul {
@@ -23,17 +27,61 @@ nav ul li {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 18px;
     font-weight: bold;
+    list-style: none;
 
-    margin: 0 2em;
+    margin: 0 1.5em;
 }
 
 /* MAIN */
 .sobre {
-    border: 1px solid black;
+    background-color: var(--cream);
     height: 500px;
 }
 
 .conteiner-sobre {
     text-align: center;
-    margin: 4em auto;
+    padding-top: 3em;
+}
+
+.conteiner-sobre img {
+    border-radius: 30%;
+    width: 10%;
+    margin-bottom: 1em;
+}
+
+.conteiner-sobre h1, h3 {
+    margin: 4px 0;
+}
+
+.conteiner-sobre p {
+    width: 40%;
+    margin: 1em auto;
+}
+
+section h2 {
+    color: var(--purple);
+}
+
+.formacao {
+    border: 1px solid black;
+    height: 500px;
+    background-color: var(--darkCream);
+}
+
+.conteiner-formacao {
+    margin: 2em 4em;
+    text-align: left;
+}
+
+.conteiner-formacao .texto {
+    margin: 2em 12em;
+    width: 40%;
+}
+
+.conteiner-formacao h4 {
+    margin: 0 0 0 0.5em;
+}
+
+.conteiner-formacao p {
+    margin: 0.5em;
 }
