--- a/módulo_I/Projeto Final/style.css
+++ b/módulo_I/Projeto Final/style.css
@@ -16,7 +16,6 @@ body {
 /* HEADER */
 nav {
     background-color: var(--purple);
-    color: #FFFFFF;
     padding: 1em 0;
 }
 
@@ -39,6 +38,11 @@ nav ul li:hover {
     transform: scale(1.2);
 }
 
+nav a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
 /* MAIN */
 
 section {
@@ -58,7 +62,7 @@ section p {
     font-size: 15px;
 }
 
-.sobre, .portfolio {
+#sobre, #portfolio {
     background-color: var(--cream);
 }
 
@@ -78,51 +82,40 @@ section p {
     margin: 1em auto;
 }
 
-.formacao {
+#formacao {
     background-color: var(--darkCream);
 }
 
 .conteiner-formacao, .conteiner-portfolio {
-    margin: 2em 6em;
+    margin: 2em 10em;
     text-align: left;
     width: 70%;
 }
 
-.texto {
-    margin: 2em 15em;
-    width: 60%;
+section li {
+    list-style: none;
+    margin: 2em 10em;
 }
 
-.texto h4 {
-    font-weight: bolder;
+section li h4 {
     color: var(--gold);
 }
 
-.texto a {
-    text-decoration: none;
-}
-
-/* .texto a:active {
-    color: var(--purple);
-} */
-
-.contato {
+#contato {
     background-color: var(--purple);
-    padding: 3em 0;
+    padding: 1.5em 0;
     font-family: var(--openSans);
     font-size: 14px;
 }
 
-.contato li {
+#contato li {
     list-style: none;
     margin: 1em;
+    color: #FFFFFF;
 }
 
-.contato img {
-    width: 2%;
-    margin: 15px;
-}
-
-.contato a {
+#contato a {
+    text-decoration: none;
+    margin-right: 5px;
     color: #FFFFFF;
 }
